k8s/security/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-api-gateway-only
  namespace: cab-booking
spec:
  selector:
    matchLabels:
      app: booking-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/cab-booking/sa/default
      to:
        - operation:
            methods:
              - GET
              - POST
              - PUT
              - DELETE
