k8s/security/network-policy-allow-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-services
  namespace: cab-booking
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - auth-service
          - booking-service
          - ride-service
          - realtime-socket
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
